<resources>
    <string name="app_name">FloatingLabels</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_first_name">名字</string>
    <string name="hint_last_name">姓氏</string>
    <string name="hint_birthday">生日日期</string>
    <string name="hint_email">電郵地址</string>
    <string name="hint_password">********</string>
    <string name="err_msg_email">輸入電郵地址</string>
    <string name="err_msg_password">輸入密碼</string>
    <string name="txt_login">登入</string>
    <string name="txt_register">Not a member? Sign up now.</string>
    <string name="txt_title_register">登錄</string>
    <string name="title_activity_register">RegisterActivity</string>
</resources>
